feat(sponsors): add description tooltips
- for ForgeRock
- for Kaizen

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -23,3 +23,8 @@
 <script src="{{.Site.BaseURL}}libs/semantic/dist/semantic.js"></script>
 <script src="{{.Site.BaseURL}}libs/bootstrap/dist/js/bootstrap.js"></script>
 <script src="{{.Site.BaseURL}}js/homepage.js"></script>
+<script type="text/javascript">
+  $(function () {
+    $('[data-toggle="tooltip"]').tooltip()
+  })
+</script>
