--- a/layouts/partials/header_includes.html
+++ b/layouts/partials/header_includes.html
@@ -5,3 +5,4 @@
 <link rel="stylesheet" href="{{.Site.BaseURL}}css/style.css">
 
 <script src="{{.Site.BaseURL}}libs/modernizr-custom.js"></script>
+<script src="{{.Site.BaseURL}}libs/jquery/dist/jquery.js"></script>
