--- a/layouts/partials/index.en.html
+++ b/layouts/partials/index.en.html
@@ -30,9 +30,11 @@
     <div class="snc-inner">
       <div class="container">
         <div class="row">
-          <div class="col-xs-12">
-            <div class="snc-heading-area">
-              <h2 class="snc-heading">
+          <div class="container col-xs-12 col-md-6">
+            <div class="row">
+              <div class="col-xs-12 col-md-12">
+                <div class="snc-heading-area">
+                  <h2 class="snc-heading">
                 <span class="back-heading">
                     <i class="fa fa-snowflake-o" aria-hidden="true"></i>
                 </span>
@@ -69,6 +71,17 @@
           </div>
         </div>
       </div>
+          <div class="col-xs-12 col-md-6">
+            <a id="feed"
+               class="twitter-timeline"
+               data-theme="dark"
+               data-tweet-limit="4"
+               data-dnt="true"
+               data-chrome="nofooter noborders noheaders"
+               href="https://twitter.com/SnowCampIO?ref_src=twsrc%5Etfw"></a>
+            <!--<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>-->
+            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+          </div>
     </div>
   </div>
 </section>
@@ -362,3 +375,43 @@
     </div>
   </div>
 </section>
+<script>
+  var widgetCSS = "" +
+    ".timeline-Tweet-retweetCredit, .timeline-Tweet-media {\n" +
+    "  display: none !important;\n" +
+    "}\n" +
+    "\n" +
+    ".timeline-Tweet-text {\n" +
+    "  margin-left: 10px;\n" +
+    "  font-size: 12px !important;\n" +
+    "  line-height: inherit !important; \n" +
+    "  font-size: inherit !important;\n" +
+    "}" +
+    "\n" +
+    ".timeline-Widget {\n" +
+    "    background-color: rgba(46, 40, 65, 0.95) !important;\n" +
+    "}";
+
+  function customizeTwitterFeedStyle(elem) {
+    // id of the iframe
+    var w = document.getElementById("twitter-widget-0").contentDocument;
+
+    var s = document.createElement("style");
+    s.innerHTML = widgetCSS;
+    s.type = "text/css";
+    w.head.appendChild(s);
+  }
+
+  waitForEl("#twitter-widget-0", customizeTwitterFeedStyle);
+
+  function waitForEl(selector, callback){
+    var poller1 = setInterval(function(){
+      var $jObject = jQuery(selector);
+      if($jObject.length < 1){
+        return;
+      }
+      clearInterval(poller1);
+      callback($jObject)
+    },100);
+  }
+</script>
