--- a/layouts/partials/index.fr.html
+++ b/layouts/partials/index.fr.html
@@ -30,47 +30,62 @@
     <div class="snc-inner">
       <div class="container">
         <div class="row">
-          <div class="col-xs-12">
-            <div class="snc-heading-area">
-              <h2 class="snc-heading">
+          <div class="container col-xs-12 col-md-6">
+            <div class="row">
+              <div class="col-xs-12 col-md-12">
+                <div class="snc-heading-area">
+                  <h2 class="snc-heading">
                 <span class="back-heading">
                     <i class="fa fa-snowflake-o" aria-hidden="true"></i>
                 </span>
-                <span class="heading">Snowcamp</span>
-              </h2>
+                    <span class="heading">Snowcamp</span>
+                  </h2>
 
-              <p class="text">
-                Une conférence unique pour les devs, les ops et les archis
-              </p>
+                  <p class="text">
+                    Une conférence unique pour les devs, les ops et les archis
+                  </p>
+                </div>
+              </div>
             </div>
+            <div class="row">
+              <div class="col-xs-12 col-sm-6 col-md-4">
+                <div class="single">
+                  <img src="{{.Site.BaseURL}}/img/icon-univ.png" alt="universities" width="30%">
+                  <h3 class="title">Universités</h3>
+                  <p class="info">Une journée de formation en profondeur<br/>(2 formations de 3 heures au choix).</p>
+                </div>
+              </div>
+              <div class="col-xs-12 col-sm-6 col-md-4">
+                <div class="single">
+                  <img src="{{.Site.BaseURL}}/img/icon-conf.png" alt="conference" width="30%">
+                  <h3 class="title">Conférences</h3>
+                  <p class="info">2 jours de conférences avec des présentations de 45 minutes.</p>
+                </div>
+              </div>
+              <div class="col-xs-12 col-sm-6 col-md-4">
+                <div class="single">
+                  <img src="{{.Site.BaseURL}}/img/icon-unconference.png" alt="unconference" width="30%">
+                  <h3 class="title">Unconference</h3>
+                  <p class="info">Une journée d'échange sur les pistes mêlant orateurs et participants.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-6">
+            <a id="feed"
+               class="twitter-timeline"
+               data-theme="dark"
+               data-tweet-limit="4"
+               data-dnt="true"
+               data-chrome="nofooter noborders noheaders"
+               href="https://twitter.com/SnowCampIO?ref_src=twsrc%5Etfw"></a>
+            <!--<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>-->
+            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
           </div>
         </div>
-        <div class="row">
-          <div class="col-xs-12 col-sm-6 col-md-4">
-            <div class="single">
-              <img src="{{.Site.BaseURL}}/img/icon-univ.png" alt="universities" width="30%">
-              <h3 class="title">Universités</h3>
-              <p class="info">Une journée de formation en profondeur<br/>(2 formations de 3 heures au choix).</p>
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-4">
-            <div class="single">
-              <img src="{{.Site.BaseURL}}/img/icon-conf.png" alt="conference" width="30%">
-              <h3 class="title">Conférences</h3>
-              <p class="info">2 jours de conférences avec des présentations de 45 minutes.</p>
-            </div>
-          </div>
-          <div class="col-xs-12 col-sm-6 col-md-4">
-            <div class="single">
-              <img src="{{.Site.BaseURL}}/img/icon-unconference.png" alt="unconference" width="30%">
-              <h3 class="title">Unconference</h3>
-              <p class="info">Une journée d'échange sur les pistes mêlant orateurs et participants.</p>
-            </div>
-          </div>
-        </div>
+
       </div>
     </div>
-  </div>
 </section>
 
 <section>
@@ -178,7 +193,8 @@
           <div class="col-xs-12 col-sm-6 col-md-6">
             <div class="single">
               <p>Le CFP est ouvert!</p>
-              <p>Vous pouvez soumettre vos sujets <a href="https://snowcamp.cfp.io" target="_blank"><strong>ici !</strong></a></p>
+              <p>Vous pouvez soumettre vos sujets <a href="https://snowcamp.cfp.io" target="_blank"><strong>ici
+                !</strong></a></p>
               <br/>
               <p>Quelques conseils :</p>
               <ul>
@@ -300,7 +316,8 @@
                 <span class="heading">Venir</span>
               </h2>
               <p class="text">
-                Cette année, SnowCamp déménage au Centre de Conférences "La Maison Minatec" à la fois pour les Universités et les Conférences.
+                Cette année, SnowCamp déménage au Centre de Conférences "La Maison Minatec" à la fois pour les
+                Universités et les Conférences.
               </p>
             </div>
           </div>
@@ -308,7 +325,8 @@
         <div class="row">
           <div class="col-xs-12 col-sm-6 col-md-6 polaroid-images">
             <div class="single">
-              <a href="https://www.minatec.org/fr/vie-de-campus/maison-minatec-centre-de-congres/" target="_blank" class="rot-4" title="La Maison Minatec">
+              <a href="https://www.minatec.org/fr/vie-de-campus/maison-minatec-centre-de-congres/" target="_blank"
+                 class="rot-4" title="La Maison Minatec">
                 <img src="{{.Site.BaseURL}}/img/la-maison-minatec.png" alt="La Maison Minatec" width="40%">
               </a>
             </div>
@@ -316,8 +334,9 @@
           <div class="col-xs-12 col-sm-6 col-md-6">
             <div class="single">
               <p>Cette année, les Universités et les Conférences auront toutes lieux à la
-                <a href="https://www.minatec.org/fr/vie-de-campus/maison-minatec-centre-de-congres/" target="_blank"><strong>"Maison Minatec"</strong></a>,
-                 un Centre de Conférences au cœur de Grenoble.</p>
+                <a href="https://www.minatec.org/fr/vie-de-campus/maison-minatec-centre-de-congres/"
+                   target="_blank"><strong>"Maison Minatec"</strong></a>,
+                un Centre de Conférences au cœur de Grenoble.</p>
               <br/>
               <p><strong>3 Parvis Louis Néel<br/>38000 Grenoble</strong></p>
               <br/>
@@ -326,8 +345,12 @@
                 <li>par la ligne B du Tram (direction Grenoble Presqu'île), arrêt "Cité Internationale"</li>
                 <li>en voiture (vous pouvez vous garer aux parkings Doyen Weil ou d'Europole Gare)
                   <ul>
-                    <li>en arrivant de Lyon ou de Valence, prenez la Sortie 16 off de la N481 ; puis le pont d'Oxford et suivez les panneaux indicateurs MINATEC via "Rue des Martyrs"</li>
-                    <li>en arrivant de Chambéry, Gap ou Sisteron, prenez la Sortie 2 de l'A480 ; et suivez les panneaux indicateurs MINATEC via "Rue Félix Esclangon"</li>
+                    <li>en arrivant de Lyon ou de Valence, prenez la Sortie 16 off de la N481 ; puis le pont d'Oxford et
+                      suivez les panneaux indicateurs MINATEC via "Rue des Martyrs"
+                    </li>
+                    <li>en arrivant de Chambéry, Gap ou Sisteron, prenez la Sortie 2 de l'A480 ; et suivez les panneaux
+                      indicateurs MINATEC via "Rue Félix Esclangon"
+                    </li>
                   </ul>
                 </li>
                 <li>en <a href="http://www.metromobilite.fr/velo.html" target="_blank">vélo</a></li>
@@ -342,7 +365,9 @@
               <p><strong>Longitude :</strong> 5.7096947222</p>
             </div>
             <div class="single">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2811.5868099502018!2d5.706387124129039!3d45.1954597678373!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x635d7041ccdf995b!2sMINATEC!5e0!3m2!1sfr!2sfr!4v1506778131344" width="500" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2811.5868099502018!2d5.706387124129039!3d45.1954597678373!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x635d7041ccdf995b!2sMINATEC!5e0!3m2!1sfr!2sfr!4v1506778131344"
+                width="500" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
             <div class="single polaroid-images">
               <a href="#" target="_blank" class="rot-4" title="Maison Minatec - Salle de Keynote">
@@ -352,7 +377,8 @@
           </div>
           <div class="col-xs-12 col-sm-6 col-md-6 polaroid-images">
             <div class="single">
-              <a href="https://www.minatec.org/fr/plan-dacces/#front-image" target="_blank" class="rot4" title="Maison Minatec - Plan d'accès">
+              <a href="https://www.minatec.org/fr/plan-dacces/#front-image" target="_blank" class="rot4"
+                 title="Maison Minatec - Plan d'accès">
                 <img src="{{.Site.BaseURL}}/img/minatec-access-en.gif" alt="La Maison Minatec" width="30%">
               </a>
             </div>
@@ -362,3 +388,43 @@
     </div>
   </div>
 </section>
+<script>
+  var widgetCSS = "" +
+    ".timeline-Tweet-retweetCredit, .timeline-Tweet-media {\n" +
+    "  display: none !important;\n" +
+    "}\n" +
+    "\n" +
+    ".timeline-Tweet-text {\n" +
+    "  margin-left: 10px;\n" +
+    "  font-size: 12px !important;\n" +
+    "  line-height: inherit !important; \n" +
+    "  font-size: inherit !important;\n" +
+    "}" +
+    "\n" +
+    ".timeline-Widget {\n" +
+    "    background-color: rgba(46, 40, 65, 0.95) !important;\n" +
+    "}";
+
+  function customizeTwitterFeedStyle(elem) {
+    // id of the iframe
+    var w = document.getElementById("twitter-widget-0").contentDocument;
+
+    var s = document.createElement("style");
+    s.innerHTML = widgetCSS;
+    s.type = "text/css";
+    w.head.appendChild(s);
+  }
+
+  waitForEl("#twitter-widget-0", customizeTwitterFeedStyle);
+
+  function waitForEl(selector, callback){
+    var poller1 = setInterval(function(){
+      var $jObject = jQuery(selector);
+      if($jObject.length < 1){
+        return;
+      }
+      clearInterval(poller1);
+      callback($jObject)
+    },100);
+  }
+</script>
