feat(sponsors): add Viseo as sponsor

--- a/layouts/partials/index.en.html
+++ b/layouts/partials/index.en.html
@@ -260,6 +260,10 @@
                 <a class="" href="http://www.norsys.fr/" target="_blank">
                   <img src="{{.Site.BaseURL}}/img/sponsors/norsys.png" alt="Norsys"/></a>
               </div>
+              <div class="single">
+                <a class="" href="http://www.viseo.com/en" target="_blank">
+                  <img src="{{.Site.BaseURL}}/img/sponsors/viseo.png" alt="Viseo"/></a>
+              </div>
             </div>
           </div>
 
